

add_executable(span span.cc)
add_executable(33waycmp 3waycmp.cc)
add_executable(StructBunding StructBunding.cc)
add_executable(paraPack paraPack.cc)
add_executable(format  format.cc)
add_executable(asyn asyn.cc)
add_executable(promise promise.cc)
add_executable(lock lock.cc)
add_executable(chrono chrono.cc)
add_executable(concept concept.cc)
add_executable(template template.cc)
add_executable(ranges ranges.cc)
